Prevent hiding button from causing jump on transition

--- a/resources/css/search-filters.pcss
+++ b/resources/css/search-filters.pcss
@@ -56,7 +56,7 @@
     z-index: 2;
   }
 
-  .search__filters-overlay--active .search__filters {
+  .search__filters {
     padding: 40px 24px;
   }
 
